fixed bug cutting off get in touch modal picture on super small phone screens

--- a/components/UI/ui.css
+++ b/components/UI/ui.css
@@ -37,10 +37,9 @@
         margin-bottom: 20px !important;
     }
     .get-in-touch-content-flex {
-        padding-top: 60px !important;
-        justify-content: center !important;
+        padding-top: 25px !important;
         margin-bottom: 20px !important;
-        align-content: center !important;
+        align-content: bottom !important;
     }
 }
 
